[package]
name = "scylla-perf"
version = "1.0.0"
edition = "2021"

[profile.dev]
opt-level = 0

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
scylla = { version = "0.15.0"}
tokio = { version = "1.41.1", features = ["full"]}
anyhow = "1.0.93"
rand = "0.8.5"
parse_duration = "2.1.1"
comfy-table = "7.1.3"
histogram = "0.11.1"
human_format = "1.1.0"
